--- a/.github/workflows/tfaction.yml
+++ b/.github/workflows/tfaction.yml
@@ -19,19 +19,19 @@ env:
 
 jobs:
   init:
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/shared/init.yml@v1.0.0
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/init.yml@v1.0.1
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
 
   validate:
     needs: init
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/shared/validate.yml@v1.0.0
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/validate.yml@v1.0.1
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
 
   plan:
     needs: validate
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/shared/plan.yml@v1.0.0
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/plan.yml@v1.0.1
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
 
@@ -49,13 +49,13 @@ jobs:
   apply:
     if: github.event.inputs.action == 'apply'
     needs: approve
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/shared/apply.yml@v1.0.0
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/apply.yml@v1.0.1
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
 
   destroy:
     if: github.event.inputs.action == 'destroy'
     needs: approve
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/shared/destroy.yml@v1.0.0
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/destroy.yml@v1.0.1
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
