--- a/.github/workflows/tfaction.yml
+++ b/.github/workflows/tfaction.yml
@@ -16,6 +16,9 @@ on:
 
 env:
   AWS_REGION: ap-south-1
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 
 jobs:
   init:
