--- a/.github/workflows/tfaction.yml
+++ b/.github/workflows/tfaction.yml
@@ -16,10 +16,12 @@ on:
 
 env:
   AWS_REGION: ap-south-1
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   init:
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/init.yml@v1.0.4
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/init.yml@v1.0.6
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -28,13 +30,16 @@ jobs:
 
   validate:
     needs: init
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/validate.yml@v1.0.4
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/validate.yml@v1.0.6
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
   plan:
     needs: validate
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/plan.yml@v1.0.4
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/plan.yml@v1.0.6
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -47,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: uat
-      url: https://your-company-uatsystem.com
+      url: https://krishnendu.online
     steps:
       - name: Await manual approval before apply/destroy
         run: echo "Manual approval gate"
@@ -55,7 +60,7 @@ jobs:
   apply:
     if: github.event.inputs.action == 'apply'
     needs: approve
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/apply.yml@v1.0.4
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/apply.yml@v1.0.6
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -65,7 +70,7 @@ jobs:
   destroy:
     if: github.event.inputs.action == 'destroy'
     needs: approve
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/destroy.yml@v1.0.4
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/destroy.yml@v1.0.6
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
