--- a/.github/workflows/tfaction.yml
+++ b/.github/workflows/tfaction.yml
@@ -31,6 +31,10 @@ jobs:
     uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/validate.yml@v1.0.6
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
+    secrets:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 
   plan:
     needs: validate
