Update: tfaction.yml to use @v1.0.14 for all shared workflows

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@
 
 # Ignore any credentials or configuration files
 *.pem
+# Ignore all tfvars except specific one
 *.tfvars
+!v2_2025/AWS-Main/IAM_Role_Policy_Root/terraform.tfvars
 *.env
 *.key
 
