--- a/.github/workflows/tfaction.yml
+++ b/.github/workflows/tfaction.yml
@@ -50,7 +50,7 @@ jobs:
     needs: plan
     runs-on: ubuntu-latest
     environment:
-      name: uat
+      name: approval
       url: https://krishnendu.online
     steps:
       - name: Await manual approval before apply/destroy
