--- a/.github/workflows/tfaction.yml
+++ b/.github/workflows/tfaction.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   init:
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/init.yml@vv1.0.20
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/init.yml@v1.0.20
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -27,7 +27,7 @@ jobs:
 
   validate:
     needs: init
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/validate.yml@vv1.0.20
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/validate.yml@v1.0.20
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -36,7 +36,7 @@ jobs:
 
   plan:
     needs: validate
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/plan.yml@vv1.0.20
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/plan.yml@v1.0.20
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -76,7 +76,7 @@ jobs:
       (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'apply') ||
       (github.event_name == 'pull_request')
     needs: plan-review
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/apply.yml@vv1.0.20
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/apply.yml@v1.0.20
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
@@ -87,7 +87,7 @@ jobs:
   destroy:
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'destroy'
     needs: plan-review
-    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/destroy.yml@vv1.0.20
+    uses: bhowmickkrishnendu/terraform-gha-workflows/.github/workflows/destroy.yml@v1.0.20
     with:
       working-directory: v2_2025/AWS-Main/IAM_Role_Policy_Root
     secrets:
